Regen wih v1.4.5 of LazyMagicMDD.
